# meeting-transcriber

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
deploy/: meeting-transcriber.container.example
docs/: architecture.md  stt-backends.md
src/meeting_transcriber/: __init__.py  agent.py  config.py  persistence.py
tests/: test_config.py
